[workspace]
resolver = "2"
members = ["response", "reverse_proxy"]

[workspace.dependencies]
bytes = "1"
http-body-util = "0.1"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
native-tls = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-native-tls = { version = "0.3" }
tokio-util = "0.7"
