[package]
name = "reverse_proxy"
version = "0.2.0"
edition = "2024"

[dependencies]
bytes = "1.11"
http-body-util = "0.1"
hyper = { version = "1.9", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
native-tls = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.51", features = ["full"] }
tokio-native-tls = { version = "0.3" }
