[package]
name = "reverse_proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { workspace = true }
hyper-util = { workspace = true }
native-tls = { workspace = true }
tokio = { workspace = true }
tokio-native-tls = { workspace = true }
tokio-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
response = { path = "../response" }
